1999-05-18 Derek Price
	<http://www-personal.engin.umich.edu/~oberon/resume.html>

	* sanity.sh (keyword2): Escaped a newline in an awk script.
	Apparently Solaris awk don't like 'em.

1999-05-18  Jim Kingdon  <http://www.cyclic.com>

	* sanity.sh (basicc): Allow the behavior whereby unlink(".")
	succeeds.  Reported by Jeremy Buhler and Pavel Roskin.

1999-05-17  Steve Cameron of Compaq

	* sanity.sh: Modified to no longer use "test -e" for existence
	test as it has turned out to be not portable enough.  Instead use
	"test -f", "test -d", etc.
	[SCO Unixware 7 apparently doesn't always support it -kingdon]

1999-05-17  Jim Kingdon  <http://www.cyclic.com>

	* version.c: Push version number to 1.10.6.1.

	* version.c: Version 1.10.6.

1999-05-16  Jim Kingdon  <http://www.cyclic.com>

	* update.c (patch_file): When we are passing vn_rcs to
	RCS_checkout, pass vn_tag as well.
	* sanity.sh (keyword): In test keyword-22, test for the fixed
	behavior rather than the buggy behavior.  Adjust keyword-23.  Add
	test keyword-24, to see whether keyword-23 really worked.

1999-05-12  Larry Jones  <larry.jones@sdrc.com>

	* sanity.sh (pserver-4, pserver-5): Bogus error messages from
	non-root initgroups on some 4.4BSD derived systems now show up
	in different places in the output.

1999-05-12  Jim Kingdon  <http://www.cyclic.com>

	* import.c (import): Don't allow the user to supply a repository
	directory which takes us out of the cvsroot.
	* sanity.sh (importc): New tests importc-10 to importc-12, for this.

1999-05-11  Larry Jones  <larry.jones@sdrc.com>

	* server.c (serve_notify): Allocate enough memory to hold the
	"misformed Notify request" message in pending_error_text.

1999-05-11  Jim Kingdon  <http://www.cyclic.com>

	* server.c (switch_to_user): Ignore EPERM from initgroups.  Fixes
	pserver-4 in testsuite.
	(pserver_authenticate_connection): Only print "I LOVE YOU" after
	switch_to_user has come back successfully.
